# stardist

./: .gitmodules  CMakeLists.txt  README.md  starconfig.h.in
scripts/stats/: gen-db  stats
src/: CMakeLists.txt  ipe_writer.cpp  ipe_writer.h  pointset.cpp  pointset.h  stardist.cpp  stardist.h  vd.cpp  vd.h
test-data/: annulus-perturbed.ipe  annulus.ipe  cotemporal.ipe  edge-event-after-last-pierce-event-wo-triangle2.ipe  edge-event-after-last-pierce-event.ipe  multi-surface-face.ipe  points.ipe  points2.ipe  square.ipe  stars-invalid1.ipe  stars-invalid2.ipe  stars-invalid3.ipe  stars.ipe  stars2.ipe
